Fix label that overlapped the previous card

--- a/style/_card.sass
+++ b/style/_card.sass
@@ -6,7 +6,7 @@
     flex-direction: column
     align-items: center
     width: 90%
-    margin-bottom: 20px
+    margin-bottom: 40px
     padding: 20px 10px
     background-color: $white
     border-radius: 10px
