--- a/style/style.css
+++ b/style/style.css
@@ -53,7 +53,7 @@
   flex-direction: column;
   align-items: center;
   width: 90%;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   padding: 20px 10px;
   background-color: #fff;
   border-radius: 10px;
